--- a/style/slot-machine.css
+++ b/style/slot-machine.css
@@ -12,3 +12,36 @@
     height: 50px;
     float: right;
 }
+
+.slot {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    position: relative;
+    top: 153px;
+}
+
+#slotOne {
+    left: 46px;
+}
+
+#slotTwo {
+    left: 81px;
+}
+
+#slotThree {
+    left: 116px;
+}
+
+#result {
+    width: 350px;
+    height: 200px;
+    text-align: center;
+    font-family: "arial";
+    font-size: 76px;
+    font-weight: bold;
+    color: red;
+    position: relative;
+    top: 2%;
+    left: 9%;
+}
