added back button to slot machine and paths to modules for other two games

--- a/style/slot-machine.css
+++ b/style/slot-machine.css
@@ -8,9 +8,16 @@
 }
 
 #slotMachine button {
-    width: 100px;
+    width: 120px;
     height: 50px;
     float: right;
+}
+
+#slotMachine #backBtn {
+    width: 120px;
+    position: relative;
+    top: 100px;
+    left: 20%;
 }
 
 .slot {
