--- a/style/blackjack.css
+++ b/style/blackjack.css
@@ -27,6 +27,10 @@
     background-size: 480px 350px;
 }
 
+#blackjack #startGameBtn {
+    padding-left: 10px;
+}
+
 #blackjack button {
     width: 120px;
     height: 50px;
@@ -59,21 +63,30 @@
 #dealerField {
     width: 450px;
     position: absolute;
-    top: 180px;
-    left: 520px;
+    top: 200px;
+    left: 600px;
 }
 
 #playerField {
     width: 450px;
     position: absolute;
-    top: 360px;
-    left: 520px;
+    top: 380px;
+    left: 600px;
+}
+
+#blackjack #message {
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    top: 300px;
+    left: 600px;
 }
 
 .card {
     width: 70px;
     height: 100px;
-    margin-right: 5px;
+    margin-right: -15px;
     display: inline-block;
     position: relative;
 }
@@ -81,7 +94,15 @@
 .drawnCard {
     width: 70px;
     height: 100px;
-    margin-right: 5px;
+    margin-right: -15px;
+    display: inline-block;
+    position: relative;
+}
+
+.drawnDealerCard {
+    width: 70px;
+    height: 100px;
+    margin-right: -15px;
     display: inline-block;
     position: relative;
 }
