--- a/style/blackjack.css
+++ b/style/blackjack.css
@@ -61,26 +61,28 @@
 }
 
 #dealerField {
-    width: 450px;
-    position: absolute;
-    top: 200px;
-    left: 600px;
+    width: 360px;
+    position: relative;
+    top: 30px;
+    left: 12%;
 }
 
 #playerField {
-    width: 450px;
-    position: absolute;
-    top: 380px;
-    left: 600px;
+    width: 360px;
+    position: relative;
+    top: 60px;
+    left: 12%;
 }
 
 #blackjack #message {
+    width: 270px;
+    height: 50px;
     font-size: 50px;
     font-weight: bold;
     text-align: center;
-    position: absolute;
-    top: 300px;
-    left: 600px;
+    position: relative;
+    top: 45px;
+    left: 20%;
 }
 
 .card {
