--- a/style/roulette.css
+++ b/style/roulette.css
@@ -28,6 +28,11 @@
 }
 
 #bettingField {
-    width: 400px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
+}
+
+#table{
+    width: 200px;
+    height: 200px;
 }
