--- a/style/blackjack.css
+++ b/style/blackjack.css
@@ -62,16 +62,17 @@
 
 #dealerField {
     width: 360px;
+    height: 100px;
     position: relative;
     top: 30px;
-    left: 12%;
+    left: 5%;
 }
 
 #playerField {
     width: 360px;
     position: relative;
     top: 60px;
-    left: 12%;
+    left: 5%;
 }
 
 #blackjack #message {
@@ -88,15 +89,18 @@
 .card {
     width: 70px;
     height: 100px;
-    margin-right: -15px;
+    margin-right: -25px;
+    margin-top: -15;
+    overflow: hidden;
     display: inline-block;
     position: relative;
 }
 
-.drawnCard {
+.drawnPlayerCard {
     width: 70px;
     height: 100px;
-    margin-right: -15px;
+    margin-right: -25px;
+    margin-top: -15;
     display: inline-block;
     position: relative;
 }
@@ -104,7 +108,8 @@
 .drawnDealerCard {
     width: 70px;
     height: 100px;
-    margin-right: -15px;
+    margin-right: -25px;
+    margin-top: -15;
     display: inline-block;
     position: relative;
 }
