--- a/style/menu.css
+++ b/style/menu.css
@@ -1,6 +1,6 @@
 #menu {
     width: 100%;
-    height: 100%;
+    height: 80%;
     padding: 2%;
 }
 
@@ -11,6 +11,14 @@
     color: black;
 }
 
+#player {
+    font-family: "BackToBlack";
+    display: inline-block;
+    text-align: center;
+    color: black;
+    margin-left: 35%;
+    margin-right: 20px;
+}
 #menu img {
     margin-top: 2%;
     margin-left: 2%;
