added function for drawing roulette betting table, not plugged yet

--- a/style/roulette.css
+++ b/style/roulette.css
@@ -32,7 +32,44 @@
     height: 300px;
 }
 
-#table{
+#table {
     width: 200px;
     height: 200px;
+}
+
+#rouletteTable table {
+    border-collapse: collapse;
+}
+
+#rouletteTable td:not(.no-border) {
+    cursor: pointer;
+}
+
+#rouletteTable table td {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    font-family: "arial";
+    font-size: 16px;
+    font-weight: bold;
+    border: 2px solid white;
+}
+
+.no-border {
+    border: none !important;
+}
+
+.green {
+    background-color: darkgreen;
+    color: white;
+}
+
+.red {
+    background-color: red;
+    color: white;
+}
+
+.black {
+    background-color: black;
+    color: white;
 }
